--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   charts_flutter: 0.10.0
   http : any
   image_picker: any
+  heatmap_calendar: ^1.2.8
 
 dev_dependencies:
   flutter_test:
