--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -47,6 +47,22 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+//    signingConfigs {
+//        release {
+//            keyAlias keystoreProperties['keyAlias']
+//            keyPassword keystoreProperties['keyPassword']
+//            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+//            storePassword keystoreProperties['storePassword']
+//        }
+//    }
+//    buildTypes {
+//        release {
+//            signingConfig signingConfigs.release
+//            minifyEnabled true
+//            useProguard true
+//            shrinkResources true
+//        }
+//    }
 }
 
 flutter {
