--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -26,11 +26,16 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Need</string>
+	<key>NSMicrophoneUsageDescription</key>
+    <string>Need</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Need</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
