--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   http : any
   image_picker: any
   webview_flutter: any
+  percent_indicator: any
 
 dev_dependencies:
   flutter_test:
