added -fix play video high quality

--- a/assets/cfg/configurations.json
+++ b/assets/cfg/configurations.json
@@ -1,4 +1,4 @@
 {
-    "base_url": "https://school.webfirst.rv.ua",
+    "base_url": "https://newschool.ru",
     "google_api_key": "AIzaSyALOooW14_Un3YhQcXtriOZXO637BJZDYg"
   }
